@@ -394,7 +394,7 @@ public class Hand {
 	}
 
 	public void redrawHand() {
-		List<Drawable> notUsed = cards.stream().filter(Drawable::isAvailable).collect(Collectors.toList());
+		List<Drawable> notUsed = cards.stream().filter(Drawable::isAvailable).toList();
 		deque.addAll(notUsed);
 		cards.removeIf(Drawable::isAvailable);
 
